# vanity-did-plc

./: Cargo.toml  LICENSE  README.md
src/: insecure_ecdsa.rs  main.rs  math.rs  plc_op.rs
